updated getStationCode service and updated primitiveVersion from string to integer
